Layout height fixed on smaller screens

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -53,7 +53,7 @@ body {
 
   /* Layout component height */
   .layout {
-    height: calc(100vh - 64px);
+    min-height: calc(100vh - 64px);
   }
 }
 
